tests/compile_fail/missing_publisher_attribute.stderr
error[E0277]: the trait bound `MyActor: Publisher<_>` is not satisfied
  --> $DIR/missing_publisher_attribute.rs:16:13
   |
16 |         ctx.publish(self, InvalidMessage);
   |             ^^^^^^^ the trait `Publisher<_>` is not implemented for `MyActor`
